--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prettier": "^2.8.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.43.9",
     "react-query": "^3.39.3",
     "styled-components": "^5.3.10",
